--- a/src/components/screens/login/Login.scss
+++ b/src/components/screens/login/Login.scss
@@ -3,6 +3,24 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  max-width: 600px;
+  min-width: 400px;
+  .welcome {
+    font-size: 28px;
+    font-weight: 500;
+    margin: 10px 0 10px 0;
+  }
+  .enter-text {
+    font-size: 15px;
+    color: #a1a4b2;
+    padding: 10px 150px 10px 150px;
+  }
+  .login-hint-text {
+    font-size: 14px;
+    color: #a1a4b2;
+    padding: 0px 170px 10px 150px;
+    font-weight: 500;
+  }
   .box {
     display: flex;
     flex-direction: column;
@@ -10,7 +28,8 @@
     align-items: center;
     justify-content: flex-start;
     align-items: flex-start;
-    width: 500px;
+    width: 300px;
+    margin: 20px 0 20px 0;
     span {
       font-size: 16px;
     }
@@ -36,5 +55,29 @@
         margin: 0 10px 0 10px;
       }
     }
+  }
+  .login-input {
+    .name-input {
+      padding: 15px;
+      font-size: 16px;
+      outline: none;
+      border: none;
+      width: 300px;
+      color: #a1a4b2 !important;
+      border-radius: 15px;
+      background-color: #f2f3f7 !important;
+      margin: 10px 0 5px 0;
+    }
+  }
+
+  .contact-support-btn {
+    cursor: pointer;
+    margin-top: 10px;
+    padding: 20px;
+    width: 300px;
+    border-radius: 25px;
+    border: none;
+    color: white;
+    background: linear-gradient(90deg, #ff5920 -14.76%, #ffa20f 106.83%);
   }
 }
